--- a/src/components/Layout/Navbar/Navbar.css
+++ b/src/components/Layout/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .class-navbar-container {
-  border: 1px solid #000;
-  background-color: #fff;
-  margin-left: auto;
+  /* border: 1px solid #000; */
+  background-color: #999;
+  padding: 10px 300px;
 }
