--- a/src/components/Layout/Navbar/Navbar.css
+++ b/src/components/Layout/Navbar/Navbar.css
@@ -1,5 +1,15 @@
 .class-navbar-container {
   /* border: 1px solid #000; */
-  background-color: #999;
-  padding: 10px 300px;
+  background-color: #fff;
+  padding: 10px 200px;
+}
+
+.class-navbar-logo-icon {
+  height: 40px;
+  width: 200px;
+}
+
+.class-navbar-profile-icon {
+  height: 40px;
+  width: 40px;
 }
