--- a/src/views/Home/components/ItemOfert/ItemOfert.css
+++ b/src/views/Home/components/ItemOfert/ItemOfert.css
@@ -5,6 +5,16 @@
   border-radius: 10px;
   row-gap: 10px;
   padding-bottom: 10px;
+  background-color: #ffffff;
+}
+
+.class-item-ofer-bottom-available {
+  border-bottom-color: #25ca56;
+  border-bottom-width: 10px;
+}
+
+.class-item-ofer-bottom-not-available {
+  border-bottom-color: #d6321c;
   border-bottom-width: 10px;
 }
 
@@ -20,11 +30,12 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  color: #003DEA;
 }
 
 .class-item-ofert-icon-round {
   border-radius: 100%;
-  border: 3px solid #000;
+  border: 3px solid #003DEA;
   width: 35px;
   height: 35px;
   display: flex;
@@ -37,7 +48,15 @@
   justify-content: center;
   align-items: center;
   border-radius: 10px;
-  border: 1px solid #000;
+  background-color: #003DEA;
   margin-left: 10px;
   margin-right: 10px;
+  color: #ffffff;
+}
+
+.class-item-ofert-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
