--- a/src/components/Layout/Footer/Footer.css
+++ b/src/components/Layout/Footer/Footer.css
@@ -21,7 +21,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #999;
+  background-image: url('../../../asset/resource/svg/FND-003.svg');
+  background-size: cover;
   padding: 100px;
 }
 
@@ -29,6 +30,7 @@
   width: 50%;
   font-size: 20pt;
   text-align: center;
+  color: #FFFFFF;
 }
 
 .class-footer-button {
@@ -40,6 +42,7 @@
   border-radius: 50px;
   background-color: #fff;
   font-size: 20pt;
+  color: #003DEA;
 }
 
 .class-footer-row-3 {
@@ -48,9 +51,14 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  background-color: rgb(19, 18, 18);
+  background-color: #32312F;
   padding: 20px 0px;
   font-size: 16pt;
-  color: #999;
+  color: #4F4E50;
   column-gap: 5px;
+}
+
+.class-footer-container-icon {
+  height: 80px;
+  width: 80px;
 }
