--- a/src/components/Layout/Slider/Slider.css
+++ b/src/components/Layout/Slider/Slider.css
@@ -1,5 +1,66 @@
 .class-slider-container {
   /* border: 1px solid #000; */
+  height: 100vh;
+}
+
+.class-slider-content-item {
+  /* background-color: rgba(129, 221, 224, 0.575); */
+  height: 400px;
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.class-slider-item-title {
+  color: #4F4E50;
+  text-align: left;
+  margin-bottom: 20px;
+}
+
+.class-slider-item-subtitle {
+  color: #003DEA;
+  text-align: left;
+  margin-bottom: 20px;
+}
+
+.class-slider-item-paragrahp {
+  color: #4F4E50;
+  font-size: 10pt;
+  text-align: justify;
+  margin-bottom: 20px;
+}
+
+.class-slider-content-item-2 {
+  height: 450px;
+  width: 600px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.class-slider-item-title-2 {
+  color: #ffffff;
+  text-align: left;
+  margin-bottom: 20px;
+}
+
+.class-slider-container-paragraph-2 {
+  height: 100%;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+}
+
+.class-slider-item-paragrahp-2 {
+  color: #ffffff;
+  font-size: 10pt;
+  text-align: justify;
+  margin-bottom: 20px;
 }
 
 /* Carousel base class */
@@ -14,12 +75,14 @@
 
 /* Declare heights because of positioning of img element */
 .carousel-item {
-  height: 40rem;
+  /* height: 40rem; */
+  height: 100vh;
 }
 .carousel-item > img {
   position: absolute;
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 40rem;
+  /* height: 40rem; */
+  height: 100vh;
 }
