--- a/src/views/Contacts/Contacts.css
+++ b/src/views/Contacts/Contacts.css
@@ -1,10 +1,13 @@
 .class-contacts-root {
-  margin-top: 100px;
+  margin-top: 60px;
 }
 
 .class-container-form-map {
-  margin-top: 100px;
-  border: 1px solid #aaa;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  /* border: 1px solid #aaa; */
+  background-image: url('../../asset/resource/FND-001.jpg');
+  background-size: cover;
 }
 
 .map {
@@ -19,12 +22,11 @@
 
 .class-container-info {
   margin-top: 50px;
-  margin-bottom: 100px;
-  border: 1px solid #aaa;
+  /* border: 1px solid #aaa; */
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   row-gap: 20px;
 }
 
@@ -34,11 +36,19 @@
   justify-content: flex-start;
   align-items: center;
   column-gap: 50px;
+  margin: 20px 0px;
 }
 
 .class-container-icon {
   border-radius: 15px;
-  border: 3px solid rgb(31, 62, 202);
-  color: rgb(31, 62, 202);
+  border: 3px solid #003DEA;
+  color: #003DEA;
   padding: 3px;
+}
+
+.class-contacts-container-header {
+  padding: 50px 0px;
+  /* border: 1px solid #aaa; */
+  background-image: url('../../asset/resource/FND-001.jpg');
+  background-size: cover;
 }
