--- a/src/views/Home/Home.css
+++ b/src/views/Home/Home.css
@@ -1,5 +1,7 @@
 .class-home-root {
   /* margin-top: 100px; */
+  display: flex;
+  flex-direction: column;
 }
 
 .class-home-row {
@@ -12,6 +14,7 @@
   padding-bottom: 10px;
   flex-wrap: wrap;
   row-gap: 10px;
+  /* border: 1px solid #000; */
 }
 
 .class-home-container-categories {
@@ -21,11 +24,25 @@
 
 .class-home-container-oferts {
   padding-bottom: 100px;
-  border: 1px solid #000;
+  background-image: url('../../asset/resource/FND-001.jpg');
+  background-size: cover;
 }
 
 .class-home-header-ofert {
   margin-top: 50px;
   margin-bottom: 20px;
   color: #003DEA;
+  /* border: 1px solid #000; */
+}
+
+.class-home-testimonials-div {
+  padding-top: 20px;
+  padding-bottom: 50px;
+  width: 100%;
+  background-image: url('../../asset/resource/FND-002.jpg');
+  background-size: cover;
+}
+
+.class-home-container-slider {
+  height: 100vh;
 }
