--- a/src/views/Home/components/ItemTestimony/ItemTestimony.css
+++ b/src/views/Home/components/ItemTestimony/ItemTestimony.css
@@ -2,11 +2,12 @@
   width: 300px;
   display: flex;
   flex-direction: column;
-  border: 1px solid #aaa;
+  /* border: 1px solid #aaa; */
   border-radius: 10px;
   row-gap: 15px;
   padding-bottom: 0px;
   border-bottom-width: 10px;
+  background-color: #ffffff;
 }
 
 .class-item-testimony-image {
@@ -19,7 +20,7 @@
 .class-item-testimony-line {
   width: 100%;
   height: 10px;
-  background-color: aquamarine;
+  background-color: #003DEA;
 }
 
 .class-item-testimony-row {
@@ -35,6 +36,7 @@
   justify-content: center;
   align-items: center;
   padding: 20px 0px;
+  color: #003DEA;
 }
 
 .class-item-testimony-comment-text {
@@ -45,7 +47,7 @@
 .class-item-testimony-line-2 {
   height: 4px;
   margin: 0px 10px;
-  background-color: aquamarine;
+  background-color: #003DEA;
 }
 
 .class-item-testimony-footer {
@@ -53,6 +55,10 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+}
+
+.class-item-text-color {
+  color: #003DEA;
 }
 
 .class-item-testimony-column {
@@ -84,7 +90,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #aaa;
+  background-color: #32312F;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+}
+
+.class-item-stars-color {
+  color: #eece18;
 }
